--- a/src/app/sections/projects/projects.html
+++ b/src/app/sections/projects/projects.html
@@ -1,10 +1,10 @@
 <section class="py-16 md:py-20 lg:py-24 bg-emerald-800 text-neutral-100" id="projects">
   <div class="max-w-7xl px-6 mx-auto md:px-12 lg:px-16">
-    <div class="text-center">
+    <div>
       <h2 class="text-3xl font-bold md:text-4xl">My Projects</h2>
       <p class="mt-4">
-        Here are some of the projects I've worked on recently. Feel free to explore them and check
-        out the code on GitHub!
+        Some cool stuff I've been working on. Feel free to explore them and check out the code on
+        GitHub!
       </p>
     </div>
     <div class="mt-12 grid gap-8 md:grid-cols-2">
