Modified education and added resume

--- a/src/app/sections/about/about.html
+++ b/src/app/sections/about/about.html
@@ -11,8 +11,8 @@
           the classroom.
         </p>
         <p class="mt-4 leading-relaxed">
-          Outside of code, I’m into rocketry, world-building, writing, and learning languages —
-          anything that brings some creativity into my very technical-focused life.
+          Outside of code, I’m into rocketry, world-building, writing, and learning languages (the
+          regular kind!) — anything that brings some creativity into my very technical-focused life.
         </p>
       </div>
 
