added links to resume

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -4,6 +4,13 @@
       <p class="text-sm">© 2024-2026 Emmanuel Cruzat. All rights reserved.</p>
 
       <div class="flex gap-6">
+        <a
+          href="https://github.com/emmanuelcruzat/portfolio-dva/blob/master/public/resume_mkvii.pdf"
+          class="hover:underline"
+          target="_blank"
+        >
+          Resume
+        </a>
         <a href="mailto:etc@njit.edu" class="hover:underline"> Email </a>
         <a href="https://github.com/emmanuelcruzat" target="_blank" class="hover:underline">
           GitHub
