--- a/src/app/sections/hero/hero.html
+++ b/src/app/sections/hero/hero.html
@@ -12,7 +12,9 @@
 
         <div class="mt-8 flex flex-wrap gap-3">
           <a
-            href="#projects"
+            href="https://github.com/emmanuelcruzat/portfolio-dva/blob/master/public/resume_mkvii.pdf"
+            class="hover:underline"
+            target="_blank"
             class="inline-flex items-center gap-2 rounded-full bg-emerald-800 px-6 py-3 text-sm font-semibold text-stone-100 hover:shadow-xl transition duration-300 hover:shadow-emerald-500/20 hover:ring-1 hover:ring-emerald-400/40"
           >
             Download Resume
