added animations and language swapper

--- a/src/app/sections/about/about.html
+++ b/src/app/sections/about/about.html
@@ -2,28 +2,39 @@
   <div class="mx-auto max-w-6xl px-6">
     <div class="grid gap-12 md:grid-cols-2 items-center">
       <!-- Text -->
-      <div>
+      <div revealOnScroll class="reveal-left space-y-6">
         <h2 class="text-4xl font-bold">About Me</h2>
         <p class="mt-4 leading-relaxed">
-          I’m a third-year computer science student at NJIT. interests sit at the intersection of
-          software engineering, cybersecurity, and leadership. I’ve led student engineering
-          organizations, worked on large technical projects, and built projects both in and out of
+          I’m Emmanuel Cruzat, and I'm passionate about cybersecurity, artificial intelligence, web
+          development, and turning cool ideas into marketable products. I’ve led student engineering
+          organizations, worked on large technical projects, and built software both in and out of
           the classroom.
         </p>
         <p class="mt-4 leading-relaxed">
-          Outside of code, I’m into rocketry, world-building, writing, and learning languages (the
-          regular kind!) — anything that brings some creativity into my very technical-focused life.
+          I've got experience with a wide range of programming languages, including Python, Java,
+          and C/C++. I've also worked with web development frameworks, like the MEAN stack.
+        </p>
+        <p class="mt-4 leading-relaxed">
+          When I'm not doing any of that, I'll probably be editing videos, learning languages,
+          building rockets, or taking my telescope out to do some stargazing. Oh, or I could be
+          playing video games. Or taking a nap too... this stuff is tiring, alright?
         </p>
       </div>
 
-      <!-- Optional visual 
-      <div class="flex justify-center">
-        <img
-          src="/assets/portrait.jpg"
-          alt="Emmanuel Cruzat"
-          class="w-72 h-72 object-cover rounded-2xl shadow-md"
-        />
-      </div>-->
+      <div revealOnScroll class="reveal-right flex flex-col items-center gap-6 w-full max-w-72">
+        <div class="w-full aspect-video float-slow">
+          <img
+            src="tampa.JPG"
+            class="w-full h-full object-cover rounded-2xl shadow-sm hover:shadow-xl transition duration-300 hover:shadow-emerald-200/20 hover:ring-1 hover:ring-emerald-100/40"
+          />
+        </div>
+        <div class="w-full aspect-video float-slower">
+          <img
+            src="philly.png"
+            class="w-full h-full object-cover rounded-2xl shadow-sm hover:shadow-xl transition duration-300 hover:shadow-emerald-200/20 hover:ring-1 hover:ring-emerald-100/40"
+          />
+        </div>
+      </div>
     </div>
   </div>
 </section>
