minor revisions to education

--- a/src/app/sections/education/education.html
+++ b/src/app/sections/education/education.html
@@ -34,20 +34,22 @@
         <div>
           <p class="font-semibold">Relevant Coursework</p>
           <ul class="mt-2 list-disc pl-5 text-neutral-600">
+            <li>Systems Integration</li>
             <li>Data Structures & Algorithms</li>
             <li>System Administration</li>
             <li>Operating Systems</li>
-            <li>Databases</li>
             <li>Internet Applications</li>
             <li>Computer Networks</li>
+            <li>Cybersecurity</li>
           </ul>
         </div>
 
         <div>
           <p class="font-semibold">Activities</p>
           <ul class="mt-2 list-disc pl-5 text-neutral-600">
-            <li>Founder / VP — NJIT Rocketry Club</li>
-            <li>NIJIT Information and Cybersecurity Club</li>
+            <li>NJIT Rocketry Club - Founder and Vice President</li>
+            <li>NJIT Information and Cybersecurity Club</li>
+            <li>NJIT Wind Ensemble</li>
           </ul>
         </div>
       </div>
